# distributed-cache

./: README.md
distributed_cache/: CMakeLists.txt
distributed_cache/include/: cache_node.h
distributed_cache/proto/: cache.proto
distributed_cache/src/: cache_node.cpp  client_example.cpp  main.cpp
include/: consistent_hash.h  lockfree_hashtable.h
src/: benchmark.cpp
